Bug 722676 - View menu item stays selected when returning from opened window. r=josh